--- a/sesi1.ipynb
+++ b/sesi1.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "sesi1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfMQVVW44gJnT9/FOLAXfh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hendriahm/python/blob/master/sesi1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xiaobao77/python/blob/master/sesi1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GiSc_8aXHQSf",
-        "colab_type": "text"
+        "id": "GiSc_8aXHQSf"
       },
       "source": [
         "Menggunakan sintaks print"
@@ -38,45 +36,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "x8gH7SdYHa8M",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43d9444f-875f-478f-897f-85bd834b2f9d"
+        "outputId": "45780629-15af-4dc5-d824-40ef9c4e2b50"
       },
       "source": [
-        "##\n",
-        "# Menampilkan alamat lengkap seseorang \n",
-        "#\n",
-        "print(\"Hendri Ahmadian\")\n",
+        "# Menampilkan alamat lengkap seseorang\n",
+        "\n",
+        "print(\"Miftahul Rahmatillah\")\n",
         "print(\"Department of Information Technology\")\n",
         "print(\"UIN Ar-Raniry\")\n",
-        "print(\"Jalan Syech Abdurrauf Kopelma Darussalam\")\n",
-        "print(\"Banda Aceh 23111\")\n",
+        "print(\"Jalan lingkar kamous uin ar-raniry\")\n",
+        "print(\"Banda Aceh 23112\")\n",
         "print(\"Indonesia\")"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hendri Ahmadian\n",
+            "Miftahul Rahmatillah\n",
             "Department of Information Technology\n",
             "UIN Ar-Raniry\n",
-            "Jalan Syech Abdurrauf Kopelma Darussalam\n",
-            "Banda Aceh 23111\n",
+            "Jalan lingkar kamous uin ar-raniry\n",
+            "Banda Aceh 23112\n",
             "Indonesia\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7tiu0HF_IRoo",
-        "colab_type": "text"
+        "id": "7tiu0HF_IRoo"
       },
       "source": [
         "Menghitung luas kamar"
@@ -86,46 +80,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "uYw5THVfIV86",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "294ed012-3c85-48e8-e10f-e54b0f0313a9"
+        "outputId": "0194e19d-9627-423f-831f-785d6f1c1f5c"
       },
       "source": [
-        "##\n",
         "# Menghitung luas kamar\n",
-        "#\n",
         "\n",
         "# Membaca angka yang dimasukkan oleh user\n",
-        "panjang = float(input(\"Masukkan ukuran panjang dalam satuan meter \"))\n",
+        "panjang = float(input(\"Masukkan panjang dalam satuan meter\"))\n",
         "lebar = float(input(\"Masukkan ukuran lebar dalam satuan meter \"))\n",
         "\n",
         "# Proses perhitungan luas\n",
         "luas = panjang * lebar\n",
         "\n",
         "# Tampilkan hasil\n",
-        "print(\"Luas dari kamar ini adalah\", luas, \"meter kuadrat\")\n"
+        "print(\"Luas kamar saya\", luas, \"meter kuadrat\")\n"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Masukkan ukuran panjang dalam satuan meter 5\n",
-            "Masukkan ukuran lebar dalam satuan meter 4\n",
-            "Luas dari kamar ini adalah 20.0 meter kuadrat\n"
-          ],
-          "name": "stdout"
+            "Masukkan panjang dalam satuan meter5\n",
+            "Masukkan ukuran lebar dalam satuan meter 3\n",
+            "Luas kamar saya 15.0 meter kuadrat\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "trRLS1YcKshT",
-        "colab_type": "text"
+        "id": "trRLS1YcKshT"
       },
       "source": [
         "Menghitung jumlah dari suatu bilangan"
@@ -135,13 +124,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "RYfwo6chK1HJ",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a8a2a7c1-a573-4571-c987-02918e04a599"
       },
       "source": [
-        "##\n",
         "# Menghitung jumlah dari bilangan positif pertama\n",
-        "#\n",
         "\n",
         "# Membaca angka yang dimasukkan oleh user\n",
         "n = int(input(\"Masukkan bilangan bulat positif:\"))\n",
@@ -152,14 +141,22 @@
         "# Tampilkan hasil\n",
         "print(\"Jumlah pertama dari \", n, \"bilangan positif adalah\", sm)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan bilangan bulat positif:2\n",
+            "Jumlah pertama dari  2 bilangan positif adalah 3.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "k7tQ6AlASXqA",
-        "colab_type": "text"
+        "id": "k7tQ6AlASXqA"
       },
       "source": [
         "Mengenal fungsi aritmatika"
@@ -169,17 +166,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "TXs5C5EnSW7r",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8175f913-d6ed-4be9-aec6-2c629074d826"
+        "outputId": "b6b0e57d-43c2-4946-9fac-7954fdf38ccb"
       },
       "source": [
-        "## \n",
         "# Pengenalan operator matematika pada Python dan modul math\n",
-        "#\n",
         "\n",
         "from math import log10\n",
         "\n",
@@ -198,22 +191,22 @@
         "print(\"Logaritma basis 10 dari\", x, \"adalah\", log10(x))\n",
         "print(x, \"^\", y, \"adalah\", x**y)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Masukkan bilangan dari x:2\n",
-            "Masukkan bilangan dari y:3\n",
-            "2 + 3 adalah 5\n",
-            "2 - 3 adalah -1\n",
-            "2 * 3 adalah 6\n",
-            "2 / 3 adalah 0.6666666666666666\n",
-            "2 % 3 adalah 2\n",
+            "Masukkan bilangan dari y:4\n",
+            "2 + 4 adalah 6\n",
+            "2 - 4 adalah -2\n",
+            "2 * 4 adalah 8\n",
+            "2 / 4 adalah 0.5\n",
+            "2 % 4 adalah 2\n",
             "Logaritma basis 10 dari 2 adalah 0.3010299956639812\n",
-            "2 ^ 3 adalah 8\n"
-          ],
-          "name": "stdout"
+            "2 ^ 4 adalah 16\n"
+          ]
         }
       ]
     }
