--- a/sesi2.ipynb
+++ b/sesi2.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "sesi2.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOPqfB6pZG4qpldTtFzmPQs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hendriahm/python/blob/master/sesi2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xiaobao77/python/blob/master/sesi2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Xkjri5kZjrHt",
-        "colab_type": "text"
+        "id": "Xkjri5kZjrHt"
       },
       "source": [
         "**Menentukan apakah suatu bilangan genap atau ganjil**"
@@ -39,13 +36,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "mafJ01Ftjyfi",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d0d3f255-da46-48b4-d92e-63532a282394"
       },
       "source": [
-        "##\n",
         "# Program untuk menentukan apakah sebuah bilangan yang diinput ganjil atau genap\n",
-        "#\n",
         "\n",
         "# Membaca bilangan yang dimasukkan user\n",
         "bil = int(input(\"Masukkan sebuah bilangan:\"))\n",
@@ -57,14 +54,22 @@
         "else:\n",
         "  print(bil, \"adalah bilangan genap\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan sebuah bilangan:45\n",
+            "45 adalah bilangan ganjil\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WBKnKMGNphsp",
-        "colab_type": "text"
+        "id": "WBKnKMGNphsp"
       },
       "source": [
         "**Menentukan suatu huruf vokal atau konsonan**"
@@ -74,11 +79,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "1FIOWP2RpqvK",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1a5ea72-ad2f-4b2f-f534-cd47eb8c41ef"
       },
       "source": [
-        "##\n",
         "# Program untuk menentukan apakah huruf tersebut vokal atau konsonan\n",
         "# Dalam Ejaan Bahasa Inggris\n",
         "\n",
@@ -95,14 +101,22 @@
         "else:\n",
         "  print(\"Ini adalah konsonan.\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan sebuah huruf dari kumpulan abjad:r\n",
+            "Ini adalah konsonan.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nDaOdiH5-yhD",
-        "colab_type": "text"
+        "id": "nDaOdiH5-yhD"
       },
       "source": [
         "**Program Menentukan nama Ukuran geometri berdasarkan sisinya**"
@@ -112,13 +126,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "W8q0x8Bf_DeJ",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75f4b087-90ab-4ce9-d635-d23ff18372d0"
       },
       "source": [
-        "##\n",
         "# Menampilkan nama ukuran geometri berdasarkan jumlah sisi yang diinput\n",
-        "#\n",
         "\n",
         "# Membaca jumlah sisi yang diinput oleh user\n",
         "sisi = int(input(\"Masukkan jumlah sisinya:\"))\n",
@@ -149,14 +163,22 @@
         "  print(\"Ini adalah\", nama)\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan jumlah sisinya:9\n",
+            "Ini adalah nonagon\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "q4C4a_d6BX2I",
-        "colab_type": "text"
+        "id": "q4C4a_d6BX2I"
       },
       "source": [
         "**Program menampilkan 4 musim berdasarkan bulan dan tanggal**"
@@ -166,18 +188,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "JepRvwHdBgqQ",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3952e3e1-1d47-41c9-8ed8-92ef4f790e9f"
       },
       "source": [
-        "##\n",
         "# Menentukan dan menampilkan nama musim berdasarkan tanggal\n",
-        "#\n",
         "\n",
         "# Membaca tanggal yang diinput oleh user\n",
         "bulan = input(\"masukkan nama bulan:\")\n",
         "tgl = int(input(\"masukkan tanggal dibulan tersebut:\"))\n",
         "\n",
+        "musim = \"Tidak diketahui\"\n",
         "# Proses menentukan nama musim\n",
         "if bulan == \"Januari\" or bulan ==\"Februari\":\n",
         "  musim = \"Winter\"\n",
@@ -211,20 +234,26 @@
         "# Tampilkan hasil\n",
         "print(tgl, bulan, \"adalah dalam musim\", musim)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "masukkan nama bulan:september\n",
+            "masukkan tanggal dibulan tersebut:22\n",
+            "22 september adalah dalam musim Tidak diketahui\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0wqWXuuJiw2N",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0wqWXuuJiw2N"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
+      "source": [],
+      "execution_count": null,
       "outputs": []
     }
   ]
