--- a/Sesi4.ipynb
+++ b/Sesi4.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "Sesi4.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNM3X9jxrHmuHcwYqO7flpY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hendriahm/python/blob/master/Sesi4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xiaobao77/python/blob/master/Sesi4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ISC17aODVlDI",
-        "colab_type": "text"
+        "id": "ISC17aODVlDI"
       },
       "source": [
         "**Membuat fungsi tanpa parameter**"
@@ -39,27 +36,43 @@
       "cell_type": "code",
       "metadata": {
         "id": "KLjnozP9TTUt",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "189c16ab-20ff-4adb-8c4c-4fe693a0b02c"
       },
       "source": [
         "# Deklarasi fungsi salam_olahraga\n",
         "def salam_olahraga():\n",
         "    # Mencetak ouput pada fungsi salam_olahraga\n",
-        "    print (\"JANGAN LUPA OLAHRAGA HARI INI!\")\n",
+        "    print (\"SOLAT TEPAT WAKTU HARI NI!\")\n",
+        "    print (\"BISMILLAH!\")\n",
+        "    print (\"TAHAMMASII!\")\n",
         "\n",
         "# Memanggil fungsi salam_olahraga\n",
         "salam_olahraga()  # memanggil fungsi salam_olahraga\n",
         "salam_olahraga()  # fungsi salam_olahraga dipanggil lagi"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SOLAT TEPAT WAKTU HARI NI!\n",
+            "BISMILLAH!\n",
+            "TAHAMMASII!\n",
+            "SOLAT TEPAT WAKTU HARI NI!\n",
+            "BISMILLAH!\n",
+            "TAHAMMASII!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mCF3HuJnW67r",
-        "colab_type": "text"
+        "id": "mCF3HuJnW67r"
       },
       "source": [
         "**Membuat fungsi dengan Parameter**"
@@ -69,26 +82,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "dXKqSU5AW_ot",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f42b712-16cd-48ae-ad45-da115bedcbea"
       },
       "source": [
-        "# Program Fungsi dengan parameter \n",
-        "# Fungsi untuk menyapa seseorang sesuai nama yang dimasukkan sebagai parameter \n",
-        "def kenalan(nama): \n",
-        "     print(\"Salam, \" + nama + \". Apa kabar?\") \n",
+        "# Program Fungsi dengan parameter\n",
+        "# Fungsi untuk menyapa seseorang sesuai nama yang dimasukkan sebagai parameter\n",
+        "def kenalan(nama):\n",
+        "     print(\"Assalamualaikum, \" + nama + \". kaifa haaluki?\")\n",
         "\n",
-        "# pemanggilan fungsi \n",
-        "kenalan('Hamzah') "
+        "# pemanggilan fungsi\n",
+        "kenalan('Miftah')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Assalamualaikum, Miftah. kaifa haaluki?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ir-wbgYVu4HH",
-        "colab_type": "text"
+        "id": "Ir-wbgYVu4HH"
       },
       "source": [
         "**Program untuk mencari nilai median**"
@@ -98,8 +120,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ogehUKpLu8Nm",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3e9fbb2-b4f8-4e03-ce36-4bac80b17d32"
       },
       "source": [
         "# Menghitung dan menampilkan nilai median dari inputan tiga angka\n",
@@ -133,8 +157,20 @@
         "# Memanggil fungsi utama()\n",
         "utama()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan nilai pertama:9\n",
+            "Masukkan nilai kedua:7\n",
+            "Masukkan nilai ketiga:15\n",
+            "Nilai median dengan cara pertama: 9.0\n",
+            "Nilai median dengan cara kedua: 9.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
