--- a/sesi5.ipynb
+++ b/sesi5.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "sesi5.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNrFXtDZjM2d62KpkuyxDve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hendriahm/python/blob/master/sesi5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xiaobao77/python/blob/master/sesi5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2HJ7cUMhuNSF",
-        "colab_type": "text"
+        "id": "2HJ7cUMhuNSF"
       },
       "source": [
         "**Program Membuat List**"
@@ -39,29 +36,40 @@
       "cell_type": "code",
       "metadata": {
         "id": "59I2hs4QqfCE",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d85e65d-dd08-4d14-dda8-b36b4462642f"
       },
       "source": [
         "# Pembuatan list pada bahasa pemrograman python\n",
         "list1 = [\"a\", \"b\", \"c\", \"d\"]\n",
-        "list2 = ['bahasa arab', 'bahasa aceh', 2019, 2020]\n",
+        "list2 = ['lughah arabiyyah', 'injiliziyyah', 2019, 2020]\n",
         "list3 = [1, 2, 3, 4, 5, 6, 7 ]\n",
         "\n",
         "\n",
         "# Mengakses Nilai list dalam Python\n",
         "print (\"list1[0]: \", list1[0])\n",
         "print (\"list2[1:3]: \", list2[1:3])\n",
-        "print (\"list3[1:5]: \", list3[1:6])"
+        "print (\"list3[1:8]: \", list3[1:10])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "list1[0]:  a\n",
+            "list2[1:3]:  ['injiliziyyah', 2019]\n",
+            "list3[1:8]:  [2, 3, 4, 5, 6, 7]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ePzepubIw6G_",
-        "colab_type": "text"
+        "id": "ePzepubIw6G_"
       },
       "source": [
         "**Mengupdate Nilai pada List**"
@@ -71,26 +79,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ef3FQ2Nnw9Pj",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f10512c3-f209-4406-9e5f-dd816a00200f"
       },
       "source": [
         "# Pembuatan list dan mengakses nilai list pada indeks 2\n",
-        "ist = ['bahasa arab', 'bahasa aceh', 2019, 2020]\n",
+        "list = ['lughahh arabiyyah', 'injiliziyyah', 2019, 2020]\n",
         "print (\"Nilai ada pada index 2 adalah: \", list[2])\n",
         "\n",
         "# Proses Update nilai list pada indeks 2\n",
         "list[2] = 2018\n",
         "print (\"Nilai baru ada pada index 2 adalah: \", list[2])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nilai ada pada index 2 adalah:  2019\n",
+            "Nilai baru ada pada index 2 adalah:  2018\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ztC0UcO7zsyw",
-        "colab_type": "text"
+        "id": "ztC0UcO7zsyw"
       },
       "source": [
         "**Menghapus Nilai pada List**"
@@ -100,20 +118,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "aT7iJAdvz0FX",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a68b73d-a5c4-4316-d560-c208d65e6e4a"
       },
       "source": [
         "# Pembuatan list\n",
-        "list = ['bahasa arab', 'bahasa aceh', 2019, 2020]\n",
+        "list = ['lughah arabiyyah', 'injiliziyyah', 2019, 2020, 2021, 2022, 2023, 2024, 2025]\n",
         "print (\"Daftar list sebelum dihapus:\", list)\n",
         "\n",
         "# Proses menghapus nilai List pada indeks 1\n",
         "del list[1]\n",
         "print (\"Setelah dihapus nilai pada index 1 : \", list)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Daftar list sebelum dihapus: ['lughah arabiyyah', 'injiliziyyah', 2019, 2020, 2021, 2022, 2023, 2024, 2025]\n",
+            "Setelah dihapus nilai pada index 1 :  ['lughah arabiyyah', 2019, 2020, 2021, 2022, 2023, 2024, 2025]\n"
+          ]
+        }
+      ]
     }
   ]
 }
