--- a/sesi6.ipynb
+++ b/sesi6.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "sesi6.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPFMdvC8/vKAFXoxGe1j5XC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hendriahm/python/blob/master/sesi6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xiaobao77/python/blob/master/sesi6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qTjxc14t23Ha",
-        "colab_type": "text"
+        "id": "qTjxc14t23Ha"
       },
       "source": [
         "**Program Sederhana Membuat Tuple**"
@@ -39,12 +36,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "F6_EVThE20TC",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "16030e3e-1e55-43d4-b953-161d1c17876b"
       },
       "source": [
         "# Deklarasi variabel stup1, stup2 dan stup3\n",
-        "stup1 = ('bahasa arab', 'bahasa aceh', 2019, 2020)\n",
+        "stup1 = ('lughah arabiyyah', 'tagalog', 2019, 2020, 2021, 2022)\n",
         "stup2 = (1, 2, 3, 4, 5, 6, 7, 8)\n",
         "stup3 = \"e\", \"f\", \"g\", \"h\"\n",
         "\n",
@@ -52,14 +51,22 @@
         "print (\"stup1[1]: \", stup1[1])\n",
         "print (\"stup2[1:5]: \", stup2[1:5])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "stup1[1]:  tagalog\n",
+            "stup2[1:5]:  (2, 3, 4, 5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9e5UgsZy4glk",
-        "colab_type": "text"
+        "id": "9e5UgsZy4glk"
       },
       "source": [
         "**Mengakses Nilai Tuple**"
@@ -69,14 +76,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "H35GakMK5MO8",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39df02fb-ce5d-4bcd-d0be-901b7c15ffdd"
       },
       "source": [
         "# Deklarasi Variabel ach\n",
-        "ach = (\"Mie Aceh\", 10000, 3.5, True, 'AyamPramugari', 88j)\n",
+        "ach = (\"Nasi Kuning\", 10000, 3.5, True, 'Martabak Telur', 88j)\n",
         "\n",
-        "# Mengakses nilai tuple  \n",
+        "# Mengakses nilai tuple\n",
         "# Data pertama indeks 0\n",
         "print(\"ach[0]:\", ach[0])\n",
         "# Data kedua indeks 1\n",
@@ -92,14 +101,27 @@
         "# Data keseluruhan\n",
         "print(\"ach[:]:\", ach[:])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ach[0]: Nasi Kuning\n",
+            "ach[1]: 10000\n",
+            "ach[2]: 3.5\n",
+            "ach[2:5]: (3.5, True, 'Martabak Telur')\n",
+            "ach[:3]: ('Nasi Kuning', 10000, 3.5)\n",
+            "ach[3:]: (True, 'Martabak Telur', 88j)\n",
+            "ach[:]: ('Nasi Kuning', 10000, 3.5, True, 'Martabak Telur', 88j)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_fX8pSaaXULb",
-        "colab_type": "text"
+        "id": "_fX8pSaaXULb"
       },
       "source": [
         "**Membuat Tuple dari Kumpulan Tuple**"
@@ -109,8 +131,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yq0upGZW4lJ0",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b27ef612-03ff-44e1-bceb-787bf13c96b6"
       },
       "source": [
         "# Contoh menambah variabel baru pada daftar tuple\n",
@@ -123,13 +147,32 @@
         "\n",
         "# Jadi, buatlah variabel tuple baru sebagai berikut\n",
         "stup3 = stup1 + stup2\n",
+        "# Contoh menambah variabel baru pada daftar tuple\n",
+        "stup1 = (10, 5.78)\n",
+        "stup2 = ('def', 'opq')\n",
+        "\n",
+        "# Jika ditambah baris berikut:\n",
+        "# stup1[0] = 100;\n",
+        "# tidak bisa dilakukan pada tuple python\n",
+        "\n",
+        "# Jadi, buatlah variabel tuple baru sebagai berikut\n",
+        "stup3 = stup1 + stup2\n",
         "print (stup3)\n",
         "\n",
-        "del stup3:\n",
+        "del stup3\n",
         "print(\"setelah dihapus:\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 5.78, 'def', 'opq')\n",
+            "setelah dihapus:\n"
+          ]
+        }
+      ]
     }
   ]
 }
